--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script defer src="script.js"></script>
 
-    <title>Profile</title>
+    <title>My Profile - HNGX Frontend task</title>
   </head>
   <body>
     <div class="user">
@@ -32,7 +32,7 @@
 
       <!-- Date -->
       <p class="date">
-        <span data-testid="currentDayOfTheWeek" class="day">Monday</span>
+        <span data-testid="currentDayOfTheWeek" class="day">Monday</span>,
         <span data-testid="currentUTCTime" class="time">00:00:00</span>
       </p>
 
